changing fxml file for formatting the and aligning the header - changed the to string to better look as well ; called close after switching scenes to ensure database disconnect

--- a/src/main/resources/Styles/CourseSearchController.css
+++ b/src/main/resources/Styles/CourseSearchController.css
@@ -9,8 +9,7 @@
 }
 
 .header-label {
-    -fx-pref-width: 50;
-    -fx-alignment: CENTER_LEFT; /* Center-align the text within the label */
+
 }
 
 
